--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
     //== Dagger ==//
     implementation "com.google.dagger:dagger:2.36"
     implementation "com.google.dagger:dagger-android:2.35.1"
